Add more unit tests
Signed-off-by: David Fuelling <sappenin@gmail.com>